lso/static/css/guide.less
@import "variables.less";

#guide {
    h1, h2, h3, h4, h5, h6 {
        font-weight: bold;
    }
    h1 {
        border-bottom: 1px #ddd solid;
        text-align: center;
    }
    article {
        max-width: 700px;
        margin: auto;
    }
    hr {
        width: 50%;
    }
}

section.sandhi {
    border-left: 10px #d6f78b solid;
    padding-left: 20px;
    // TODO: negative margin?
}

.admonition-title {
    display: none;  // TODO: don't create HTML for this.
}

.note, .rule, .warning {
    // TODO: play around with highlighting on margin
    border: 1px solid;
    border-left-width: 7px;
    .border-radius(3px);
    padding: 0 1em 0 2em;
    margin: 1em 0;
}

.note {
    border-color: #fc0;
}

.rule {
    background: #e7fabb;
    border-color: #d6f78b;
}

.warning {
    background: #ffe4e4;
    border-color: #ff9999;
}

ul.special-chars {
    list-style: none;
    padding: 0;

    li {
        float: left;
        padding: 0.5em;
        background: @light-gray;
        width: (100 - 11)/11%;
        box-sizing: border-box;
        margin-left: 1%;
        border-radius: 5px;
        text-align: center;
        transition: 0.2s ease;

        &:hover {
            background: @link-color;
            .sa2 {
                color: #fff;
            }
        }
        &:active {
            position: relative;
            top: 2px;
        }
    }
    span.sa2 {
        font-size: 1.5em;
    }
    kbd {
        display: block;
    }
}

section.exercises {
    background: @off-white;
    position: absolute;
    left: 0;
    right: 0;
    min-height: 100%;  // TODO: reliable across browsers?
    // TODO: negative margin?

    &.done {
        background: #e7fabb;
        transition: background 0.5s ease;
    }

    div.quiz-question {
        color: @blue;
        padding-left: 1em;
        mark {
            color: inherit;
        }
    }

    div.wrapper {
        max-width: 700px;
        margin: auto;
    }

    p.sa1, span.sa1 {
        font-size: 2em;
        line-height: 1em;
        margin: 0;
    }

    p.quiz-status {
        font-style: italic;
        margin: 0 0 1em;
    }

    ol.quiz-questions, ol.quiz-answers {
        li {
            margin: 0 0 1em;
        }
        p {
            margin: 0;
        }
    }

    div.progress, div.progress-bar {
        border-radius: 5px;
    }
    div.progress {
        background: @light-gray;
        margin: 1em 0;
    }
    div.progress-bar {
        height: 1em;
        width: 0;
        background: #5cb85c;
        transition: width 0.5s ease;
    }
}

div.examples ul {
    background: @off-white;
    list-style: none;
    overflow: auto;
    padding: 0;

    p.sa1, span.sa1 {
        font-size: 2em;
        line-height: 1em;
    }

    li {
        margin: 1.5em;
    }

    p {
        margin: 0;
    }
}

ul.lesson-list {
    list-style: none;
    padding: 0;

    a {
        display: block;
        padding: 0.5em 1em;

        &:hover {
            background: @off-white;
        }
    }
    li {
        border-bottom: 1px @off-white solid;
    }
}

ul.sounds, ul.letters {
    list-style-type: none;
    margin: 1em 0;
    overflow: hidden;
    padding: 0;

    &.width-2 li {
        float: left;
        width: 50%;
    }
    &.width-3 li {
        float: left;
        width: 33%;
    }
    &.width-4 li {
        float: left;
        width: 25%;
    }
    &.width-5 li {
        float: left;
        width: 20%;
    }
    &.width-6 li {
        float: left;
        width: 16.6%;
    }
    &.width-10 li {
        float: left;
        width: 10%;
    }


    a {
        text-decoration: none;
    }

    li {
        text-align: center;
        width: 100%;
    }

    span.sounds-letter {
        font-size: 3em;
        line-height: 4/3em;
        display: block;
    }
}

